train/ml2023-r1-dataset/aa/aa2c3d9b1aa57eaef1b4-OTHER.txt

Traceback (most recent call last):
  File "/app/Hiroko/modules/eval.py", line 53, in executor
    await aexec(cmd, client, message)
  File "/app/Hiroko/modules/eval.py", line 14, in aexec
    exec(
  File "", line 6
    From Hiroko import Hiroko 
         ^^^^^^
SyntaxError: invalid syntax